--- a/HospitalManagement/Views/Dashboard.xaml
+++ b/HospitalManagement/Views/Dashboard.xaml
@@ -5,8 +5,210 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalManagement.Views"
         mc:Ignorable="d"
-        Title="Dashboard" Height="450" Width="800">
+        Title="Dashboard" Height="800" Width="1200">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="15"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="15"/>
+        </Grid.ColumnDefinitions>
+
+
+        <StackPanel
+            Grid.Row="2" 
+            Grid.RowSpan="10" 
+            Grid.Column="0" 
+            Grid.ColumnSpan="3" 
+            Background="SlateGray">
+
+            <Button
+                Content="Manage Patients"
+                FontFamily="Bahnschrift SemiBold SemiCondensed"
+                Height="60"
+                FontSize="30"
+                Width="350"
+                Margin="0, 25, 0, 0"
+                Background="FloralWhite"
+                BorderBrush="Black"
+                BorderThickness="2"/>
+
+            <Button
+                Content="Manage Doctors"
+                FontFamily="Bahnschrift SemiBold SemiCondensed"
+                Height="60"
+                FontSize="30"
+                Width="350"
+                Margin="0, 25, 0, 0"
+                Background="FloralWhite"
+                BorderBrush="Black"
+                BorderThickness="2"/>
+
+            <Button
+                Content="Manage Staff"
+                FontFamily="Bahnschrift SemiBold SemiCondensed"
+                Height="60"
+                FontSize="30"
+                Width="350"
+                Margin="0, 25, 0, 0"
+                Background="FloralWhite"
+                BorderBrush="Black"
+                BorderThickness="2"/>
+
+            <Button
+                Content="HRMS Dashboard"
+                FontFamily="Bahnschrift SemiBold SemiCondensed"
+                Height="60"
+                FontSize="30"
+                Width="350"
+                Margin="0, 25, 0, 0"
+                Background="FloralWhite"
+                BorderBrush="Black"
+                BorderThickness="2"/>
+
+            <Button
+                Content="Inventory Dashboard"
+                FontFamily="Bahnschrift SemiBold SemiCondensed"
+                Height="60"
+                FontSize="30"
+                Width="350"
+                Margin="0, 25, 0, 0"
+                Background="FloralWhite"
+                BorderBrush="Black"
+                BorderThickness="2"/>
+        </StackPanel>
+
+        <StackPanel
+            Orientation="Horizontal"
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            Grid.Column="0"
+            Grid.ColumnSpan="8"
+            Background="Navy">
+            <Image
+                Source="/assets/logo.png"
+                Height="80"
+                Margin="40, 0, 0, 0"/>
+        </StackPanel>
+
+        <Grid 
+                Grid.Row="2"
+                Grid.Column="3" 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="200"
+                Width="300"
+                Background="GhostWhite">
+
+
+            <Border 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="180"
+                Width="280"
+                Background="White"
+                CornerRadius="20"
+                BorderThickness="3"
+                BorderBrush="LightSteelBlue">
+                <StackPanel>
+                    <Label Content="Registered Doctors" FontSize="20" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" FontWeight="Bold" Margin="0,10,0,0"/>
+                    <Label Content="50" FontSize="40" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" VerticalAlignment="Center" Foreground="Green" Margin="0, 20, 0, 0"/>
+                </StackPanel>
+            </Border>
+        </Grid>
+
+        <Grid 
+                Grid.Row="2"
+                Grid.Column="5" 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="200"
+                Width="300"
+                Background="GhostWhite">
+
+
+            <Border 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="180"
+                Width="280"
+                Background="White"
+                CornerRadius="20"
+                BorderThickness="3"
+                BorderBrush="LightSteelBlue">
+                <StackPanel>
+                    <Label Content="Registered Doctors" FontSize="20" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" FontWeight="Bold" Margin="0,10,0,0"/>
+                    <Label Content="50" FontSize="40" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" VerticalAlignment="Center" Foreground="Green" Margin="0, 20, 0, 0"/>
+                </StackPanel>
+            </Border>
+        </Grid>
+
+        <Grid 
+                Grid.Row="4"
+                Grid.Column="3" 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="200"
+                Width="300"
+                Background="GhostWhite">
+
+
+            <Border 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="180"
+                Width="280"
+                Background="White"
+                CornerRadius="20"
+                BorderThickness="3"
+                BorderBrush="LightSteelBlue">
+                <StackPanel>
+                    <Label Content="Registered Doctors" FontSize="20" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" FontWeight="Bold" Margin="0,10,0,0"/>
+                    <Label Content="50" FontSize="40" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" VerticalAlignment="Center" Foreground="Green" Margin="0, 20, 0, 0"/>
+                </StackPanel>
+            </Border>
+        </Grid>
+
+        <Grid 
+                Grid.Row="4"
+                Grid.Column="5" 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="200"
+                Width="300"
+                Background="GhostWhite">
+
+
+            <Border 
+                Grid.ColumnSpan="2" 
+                Grid.RowSpan="2"
+                Height="180"
+                Width="280"
+                Background="White"
+                CornerRadius="20"
+                BorderThickness="3"
+                BorderBrush="LightSteelBlue">
+                <StackPanel>
+                    <Label Content="Registered Doctors" FontSize="20" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" FontWeight="Bold" Margin="0,10,0,0"/>
+                    <Label Content="50" FontSize="40" HorizontalAlignment="Center" FontFamily="Arial" FontStyle="Normal" VerticalAlignment="Center" Foreground="Green" Margin="0, 20, 0, 0"/>
+                </StackPanel>
+            </Border>
+        </Grid>
     </Grid>
 </Window>
