Add UI Detailing

--- a/HospitalManagement/MainWindow.xaml
+++ b/HospitalManagement/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalManagement"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="CanResizeWithGrip" x:Name="Window_Login"> 
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -119,7 +119,8 @@
                 FontFamily="Bahnschrift SemiBold SemiCondensed"
                 FontWeight="DemiBold"
                 Background="DarkGreen"
-                Foreground="White"/>
+                Foreground="White"
+                Click="Btn_Login_Click"/>
             </StackPanel>
         </Grid>
     </Grid>
