--- a/HospitalManagement/Views/PatientViews/DisplayPatient.xaml
+++ b/HospitalManagement/Views/PatientViews/DisplayPatient.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -39,8 +40,138 @@
                 Foreground="White"
                 Margin="130, 15, 0, 0"/>
         </Border>
-        
-        
-        
+
+        <Image
+            Source="/assets/profile-photo.png"
+            Grid.Column="3"
+            HorizontalAlignment="Center"
+            Grid.ColumnSpan="3"
+            Grid.Row="1"
+            Grid.RowSpan="1"
+            Margin="0, 10, 0, 0"/>
+
+
+
+        <StackPanel
+                Grid.Row="2"
+                Grid.Column="0"
+                Orientation="Vertical"
+                Grid.ColumnSpan="9"
+                Grid.RowSpan="4">
+
+            <!-- First Name & Last Name Label + TextBox -->
+
+            <StackPanel
+                Orientation="Horizontal"
+                Margin="150, 50, 0, 0">
+
+                <Label 
+                    Margin="0, 0, 0, 0"
+                    Content="First Name"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"/>
+
+                <Label 
+                    Margin="280, 0, 0, 0"
+                    Content="Last Name"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"/>
+            </StackPanel>
+
+
+            <StackPanel
+                Orientation="Horizontal"
+                Margin="100, 0, 0, 0">
+
+                <TextBox
+                    x:Name="txtBox_FirstName"
+                    Margin="0, 0, 0, 0"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"
+                    Height="40"
+                    Width="200"/>
+
+                <TextBox 
+                    x:Name="txtBox_LastName"
+                    Margin="180, 0, 0, 0"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"
+                    Height="40"
+                    Width="200"/>
+            </StackPanel>
+
+            <!-- Age & Address Label + TextBox -->
+
+            <StackPanel
+                Orientation="Horizontal"
+                Margin="150, 10, 0, 0">
+
+                <Label 
+                    Margin="30, 0, 0, 0"
+                    Content="Age"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"/>
+
+                <Label 
+                    Margin="330, 0, 0, 0"
+                    Content="Address"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"/>
+            </StackPanel>
+
+            <StackPanel
+                Orientation="Horizontal"
+                Margin="100, 0, 0, 0">
+
+                <TextBox 
+                    x:Name="txtBox_Age"
+                    Margin="0, 0, 0, 0"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"
+                    Height="40"
+                    Width="200"/>
+
+                <TextBox 
+                    x:Name="txtBox_Address"
+                    Margin="180, 0, 0, 0"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"
+                    Height="40"
+                    Width="200"/>
+            </StackPanel>
+
+
+            <!-- Submit Button -->
+
+            <StackPanel
+                Orientation="Horizontal">
+
+                <Button 
+                    x:Name="Btn_Modify"
+                    Margin="200, 30, 0, 0"
+                    HorizontalAlignment="Left"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="25"
+                    Width="150"
+                    Height="40"
+                    Content="Modify Entry"
+                    Background="Orange"
+                    Foreground="White"
+                    Click="Btn_Modify_Click"/>
+
+                <Button 
+                    x:Name="Btn_Delete"
+                    Margin="100, 30, 0, 0"
+                    HorizontalAlignment="Left"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="25"
+                    Width="150"
+                    Height="40"
+                    Content="Delete"
+                    Background="Red"
+                    Foreground="White"
+                    Click="Btn_Delete_Click"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
