--- a/HospitalManagement/Views/Dashboard.xaml
+++ b/HospitalManagement/Views/Dashboard.xaml
@@ -64,6 +64,19 @@
                 BorderBrush="Black"
                 BorderThickness="2"
                 Click="Btn_ManageInventory_Click"/>
+
+            <Button
+                x:Name="Btn_ManagePhysicians"
+                Content="Manage Physicians"
+                FontFamily="Bahnschrift SemiBold SemiCondensed"
+                Height="50"
+                FontSize="20"
+                Width="250"
+                Margin="0, 25, 0, 0"
+                Background="FloralWhite"
+                BorderBrush="Black"
+                BorderThickness="2"
+                Click="Btn_ManagePhysicians_Click"/>
         </StackPanel>
 
         <StackPanel
