--- a/HospitalManagement/Views/PatientViews/AddPatientHistory.xaml
+++ b/HospitalManagement/Views/PatientViews/AddPatientHistory.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="HospitalManagement.Views.PatientViews.DisplayPatient"
+﻿<Window x:Class="HospitalManagement.Views.PatientViews.AddPatientHistory"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HospitalManagement.Views.PatientViews"
         mc:Ignorable="d"
-        Title="DisplayPatient" Height="600" Width="800">
+        Title="AddPatientHistory" Height="700" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -16,7 +16,7 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -27,33 +27,24 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+
         <Border
+            x:Name="mainBorder"
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="9"
             Background="Navy">
 
-            <Label 
-                Content="View Patient Information"
+            <Label
+                x:Name="lbl_Main"
                 FontFamily="Bahnschrift SemiBold SemiCondensed"
                 FontSize="35"
                 Foreground="White"
-                Margin="130, 15, 0, 0"/>
+                Margin="30, 10, 0, 0"/>
         </Border>
 
-        <Image
-            Source="/assets/profile-photo.png"
-            Grid.Column="3"
-            HorizontalAlignment="Center"
-            Grid.ColumnSpan="3"
-            Grid.Row="1"
-            Grid.RowSpan="1"
-            Margin="0, 10, 0, 0"/>
-
-
-
         <StackPanel
-                Grid.Row="2"
+                Grid.Row="1"
                 Grid.Column="0"
                 Orientation="Vertical"
                 Grid.ColumnSpan="9"
@@ -63,19 +54,65 @@
 
             <StackPanel
                 Orientation="Horizontal"
-                Margin="150, 50, 0, 0">
+                Margin="150, 20, 0, 0">
 
                 <Label 
                     Margin="0, 0, 0, 0"
-                    Content="First Name"
+                    Content="Diagnosis"
                     FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="20"/>
+                    FontSize="25"/>
+
+                <Label 
+                    Margin="250, 0, 0, 0"
+                    Content="Attending Doctor"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="25"/>
+            </StackPanel>
+
+
+            <StackPanel
+                Orientation="Horizontal"
+                Margin="100, 0, 0, 0">
+
+                <ComboBox
+                    x:Name="cBox_Diagnosis"
+                    Margin="0, 0, 0, 0"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"
+                    Height="45"
+                    Width="200">
+                    <ComboBoxItem Content="CARDIO"/>
+                    <ComboBoxItem Content="NEURO"/>
+                    <ComboBoxItem Content="GENERAL"/>
+                    <ComboBoxItem Content="ORTHO"/>
+                    <ComboBoxItem Content="OTHER"/>
+                </ComboBox>
+
+                <ComboBox 
+                    x:Name="cBox_AttendingDoctor"
+                    Margin="180, 0, 0, 0"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="20"
+                    Width="200"/>
+            </StackPanel>
+
+            <!-- First Name & Last Name Label + TextBox -->
+
+            <StackPanel
+                Orientation="Horizontal"
+                Margin="150, 20, 0, 0">
+
+                <Label 
+                    Margin="0, 0, 0, 0"
+                    Content="Entry Date"
+                    FontFamily="Bahnschrift SemiBold SemiCondensed"
+                    FontSize="25"/>
 
                 <Label 
                     Margin="280, 0, 0, 0"
-                    Content="Last Name"
+                    Content="Notes"
                     FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="20"/>
+                    FontSize="25"/>
             </StackPanel>
 
 
@@ -83,108 +120,56 @@
                 Orientation="Horizontal"
                 Margin="100, 0, 0, 0">
 
-                <TextBox
-                    x:Name="txtBox_FirstName"
+                <DatePicker 
+                    x:Name="date_EntryDate"
                     Margin="0, 0, 0, 0"
                     FontFamily="Bahnschrift SemiBold SemiCondensed"
                     FontSize="20"
-                    Height="40"
+                    Height="50"
                     Width="200"/>
 
                 <TextBox 
-                    x:Name="txtBox_LastName"
+                    x:Name="txtBox_Notes"
                     Margin="180, 0, 0, 0"
                     FontFamily="Bahnschrift SemiBold SemiCondensed"
                     FontSize="20"
-                    Height="40"
                     Width="200"/>
             </StackPanel>
 
-            <!-- Age & Address Label + TextBox -->
+            <Label 
+                 Margin="0, 50, 0, 0"
+                 Content="Report"
+                 HorizontalAlignment="Center"
+                 FontFamily="Bahnschrift SemiBold SemiCondensed"
+                 FontSize="25"/>
 
-            <StackPanel
-                Orientation="Horizontal"
-                Margin="150, 10, 0, 0">
-
-                <Label 
-                    Margin="30, 0, 0, 0"
-                    Content="Age"
-                    FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="20"/>
-
-                <Label 
-                    Margin="330, 0, 0, 0"
-                    Content="Address"
-                    FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="20"/>
-            </StackPanel>
-
-            <StackPanel
-                Orientation="Horizontal"
-                Margin="100, 0, 0, 0">
-
-                <TextBox 
-                    x:Name="txtBox_Age"
-                    Margin="0, 0, 0, 0"
-                    FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="20"
-                    Height="40"
-                    Width="200"/>
-
-                <TextBox 
-                    x:Name="txtBox_Address"
-                    Margin="180, 0, 0, 0"
-                    FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="20"
-                    Height="40"
-                    Width="200"/>
-            </StackPanel>
-
+            
+            
+            <TextBox
+                x:Name="txtBox_Report"
+                HorizontalAlignment="Center"
+                Height="150"
+                Width="400"
+                FontFamily="Bahnschrift SemiBold SemiCondensed"
+                FontSize="15"
+                Margin="0, 5, 0, 40"
+                Background="GhostWhite"
+                TextWrapping="Wrap"/>
 
             <!-- Submit Button -->
 
-            <StackPanel
-                Orientation="Horizontal">
-
-                <Button 
-                    x:Name="Btn_Modify"
-                    Margin="200, 30, 0, 0"
-                    HorizontalAlignment="Left"
-                    FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="25"
-                    Width="150"
-                    Height="40"
-                    Content="Modify Entry"
-                    Background="Orange"
-                    Foreground="White"
-                    Click="Btn_Modify_Click"/>
-
-                <Button 
-                    x:Name="Btn_Delete"
-                    Margin="100, 30, 0, 0"
-                    HorizontalAlignment="Left"
-                    FontFamily="Bahnschrift SemiBold SemiCondensed"
-                    FontSize="25"
-                    Width="150"
-                    Height="40"
-                    Content="Delete"
-                    Background="Red"
-                    Foreground="White"
-                    Click="Btn_Delete_Click"/>
-            </StackPanel>
-
             <Button 
-                    x:Name="Btn_PatientHistory"
-                    Margin="0, 30, 0, 0"
+                    x:Name="Btn_Submit"
+                    Margin="0, 0, 0, 0"
                     HorizontalAlignment="Center"
                     FontFamily="Bahnschrift SemiBold SemiCondensed"
                     FontSize="25"
-                    Width="250"
-                    Height="40"
-                    Content="View Patient History"
-                    Background="Blue"
+                    Width="200"
+                    Height="50"
+                    Content="Submit Entry"
+                    Background="Green"
                     Foreground="White"
-                    Click="Btn_PatientHistory_Click"/>
+                    Click="Btn_Submit_Click"/>
         </StackPanel>
     </Grid>
 </Window>
