--- a/HospitalManagement/Views/InventoryViews/InventoryManagement.xaml
+++ b/HospitalManagement/Views/InventoryViews/InventoryManagement.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HospitalManagement.Views.InventoryViews.InventoryManagement"
+﻿ <Window x:Class="HospitalManagement.Views.InventoryViews.InventoryManagement"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -56,7 +56,7 @@
                     Background="SlateGray"
                     BorderBrush="Black"
                     BorderThickness="1"
-                    >
+                    Click="Btn_AddInventory_Click">
                     <Image Source="/assets/login-logo.png" Width="50" Height="80"/>
                 </Button>
             </StackPanel>
@@ -69,14 +69,15 @@
             Grid.ColumnSpan="7"
             Grid.RowSpan="5"
             FontFamily="Bahnschrift SemiBold SemiCondensed" 
-            Background="FloralWhite">
+            Background="FloralWhite"
+            MouseDoubleClick="listView_Main_MouseDoubleClick">
             <ListView.View>
                 <GridView 
                     AllowsColumnReorder="False">
-                    <GridViewColumn Header = "ID" DisplayMemberBinding = "{Binding id}" Width = "150"/>
-                    <GridViewColumn Header = "Inventory Description/Category" DisplayMemberBinding = "{Binding Title}" Width = "150"/>
-                    <GridViewColumn Header = "Quantity" DisplayMemberBinding = "{Binding Quantity}" Width = "150"/>
-                    
+                    <GridViewColumn Header = "ID" DisplayMemberBinding = "{Binding InventoryID}" Width = "150"/>
+                    <GridViewColumn Header = "Product Name" DisplayMemberBinding = "{Binding ProductName}" Width = "150"/>
+                    <GridViewColumn Header = "Quantity (In Stock and Use)" DisplayMemberBinding = "{Binding ProductQuantity}" Width = "150"/>
+                    <GridViewColumn Header = "Category" DisplayMemberBinding = "{Binding Category}" Width = "150"/>
                 </GridView>
             </ListView.View>
         </ListView>
